cr comments of Julian